PRO-0: add pets
