# src/main/java/com/jiubredeemer/charactersheet/domain/pet/dto/PetAbilityRequest.java
@@ -1,0 +1,9 @@
+package com.jiubredeemer.charactersheet.domain.pet.dto;
+
+import lombok.Data;
+
+@Data
+public class PetAbilityRequest {
+    private String abilityCode;
+    private Long bonusValue;
+}
