# src/main/java/com/jiubredeemer/charactersheet/domain/pet/dto/PetSkillRequest.java
@@ -1,0 +1,9 @@
+package com.jiubredeemer.charactersheet.domain.pet.dto;
+
+import lombok.Data;
+
+@Data
+public class PetSkillRequest {
+    private String name;
+    private String description;
+}
